2006-08-31 Joerg Wunsch <j@uriah.heep.sax.de>

	The major part of this change has been contributed by
	<andyw@pobox.com>.
	Implements patch #4635: Add support for terminal/console
	servers for serial programmers
	* ser_posix.c: Add net_open(), and divert to it for net:host:port.
	* ser_win32.c: Recognize net:host:port, and bail out.
	* avrdude.1: Document the net:host:port connection option.
	* doc/avrdude.texi: (Ditto.)

2006-08-31 Joerg Wunsch <j@uriah.heep.sax.de>

	Fix for bug #16627: Butterfly programmer does not reset after
	programming
	* butterfly.c: Wait for the device's response after sending
	an "E" command.

2006-08-31 Joerg Wunsch <j@uriah.heep.sax.de>

	Tentative fix for bug #16156: Problem with Si-Prog
	* serbb_posix.c: Disable reset before closing.
	* serbb_win32.c: (Ditto.)

2006-08-30 Joerg Wunsch <j@uriah.heep.sax.de>

	Rewrite the serbb code so the pin numbering matches the
	DB9 connector, and fix some related bugs in serbb_posix.c.
	Closes bug #16265: dasa2 does not work under posix
	* avrdude.conf.in: New serbb pin numbering; added "siprog"
	as an alias for "ponyser".
	* serbb_posix.c: New pin numbering, fix some confusion.
	* serbb_win32.c: New pin numbering.
	The generic and Posix-related parts of these changes have
	been contributed by Hanns-Konrad Unger

2006-08-30 Joerg Wunsch <j@uriah.heep.sax.de>

	Contributed by the anonymous developer of patch #5096:
	* avrdude.conf.in (blaster): Add an entry for the Altera
	byteblaster.

2006-08-30 Joerg Wunsch <j@uriah.heep.sax.de>

	Rework the exit specs so they actually work again.  It should be
	possible to extend them for other programmers than PPI now (serbb,
	stk500*).
	* pgm.h: Keep the exit specs in an abstract form inside struct
	programmer_t.  (Should be moved out into some programmer-specific
	structure.)  Rename the getexitspecs() method into
	parseexitspecs().
	* main.c: Move the exit specs stuff out to the programmer
	implementation.